--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -95,15 +95,15 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=2103,Y=1800)
+LastSize=(X=2133,Y=2000)
 LastExecutedLaunchDevice=Windows@DESKTOP-H39IJFD
 LastExecutedLaunchName=DESKTOP-H39IJFD
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=0,Y=0)
-NewWindowWidth=2103
-NewWindowHeight=1800
+NewWindowWidth=2133
+NewWindowHeight=2000
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
@@ -135,17 +135,13 @@ CurrentScalingGridSize=6
 CurrentRotGridSize=0
 
 [EditorStartup]
-LastLevel=/Game/NS_Levels/NS_MainMenuLevel
+LastLevel=/Game/NS_Levels/NS_MainLevel
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/NS_Enemy/Animation/Punching__6__Anim_mixamo_com_Retargeted_Montage.Punching__6__Anim_mixamo_com_Retargeted_Montage
-OpenAssetsAtExit=/Game/NS_Audio/DeathCue.DeathCue
 OpenAssetsAtExit=/Game/NS_Enemy/Enemy_BP.Enemy_BP
 OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
-OpenAssetsAtExit=/Game/NS_Audio/Impact_Cue.Impact_Cue
-OpenAssetsAtExit=/Game/NS_Enemy/Animation/Dying_Anim_mixamo_com.Dying_Anim_mixamo_com
-OpenAssetsAtExit=/Game/NS_Enemy/Animation/RTG_Ch44_nonPBR_Mannequin.RTG_Ch44_nonPBR_Mannequin
+OpenAssetsAtExit=/Game/Characters/Mannequins/Meshes/SKM_Manny.SKM_Manny
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1041,6 +1037,28 @@ SoundNodeModulator.Modulation=True
 EnemyAiANim_C.RootMotion=True
 EnemyAiANim_C.Notifies=True
 EnemyAiANim_C.Montage=True
+SpringArmComponent.Variable=True
+SpringArmComponent.TransformCommon=True
+SpringArmComponent.Sockets=True
+SpringArmComponent.Camera=True
+SpringArmComponent.CameraCollision=True
+SpringArmComponent.CameraSettings=True
+SpringArmComponent.ComponentTick=True
+SpringArmComponent.Lag=True
+SpringArmComponent.Rendering=True
+SpringArmComponent.Tags=True
+SpringArmComponent.ComponentReplication=True
+SpringArmComponent.Activation=True
+SpringArmComponent.Cooking=True
+SpringArmComponent.Events=True
+ABP_Quinn_PostProcess_C.RootMotion=True
+ABP_Quinn_PostProcess_C.Notifies=True
+ABP_Quinn_PostProcess_C.Montage=True
+AnimGraphNode_Root.Functions=True
+AnimGraphNode_Root.Tag=True
+AnimGraphNode_Slot.Settings=True
+AnimGraphNode_Slot.Functions=True
+AnimGraphNode_Slot.Tag=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1055,8 +1073,8 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap", ()),("/Game/NS_Levels/NS_MainLevel.NS_MainLevel", ()))
 
 [RootWindow]
-ScreenPosition=X=182.000 Y=18.000
-WindowSize=X=1300.000 Y=740.000
+ScreenPosition=X=1132.667 Y=41.333
+WindowSize=X=1304.000 Y=744.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1073,11 +1091,11 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [DetailPropertyExpansion]
-WorldSettings="\"Object.World.NavigationSystemConfig\" \"Object.Lightmass.LightmassSettings\" \"Object.Lightmass.LightmassSettings.EnvironmentColor\" \"Object.Audio.DefaultReverbSettings\" "
-Info="\"Object.World.NavigationSystemConfig\" \"Object.Lightmass.LightmassSettings\" \"Object.Lightmass.LightmassSettings.EnvironmentColor\" \"Object.Audio.DefaultReverbSettings\" "
+WorldSettings="\"Object.World.NavigationSystemConfig\" \"Object.Lightmass.LightmassSettings\" \"Object.Lightmass.LightmassSettings.EnvironmentColor\" \"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" \"Object.Audio.DefaultReverbSettings\" "
+Info="\"Object.World.NavigationSystemConfig\" \"Object.Lightmass.LightmassSettings\" \"Object.Lightmass.LightmassSettings.EnvironmentColor\" \"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" \"Object.Audio.DefaultReverbSettings\" "
 WorldPartitionRuntimeSpatialHash="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" \"Object.RuntimeSettings.Grids.Grids[0].DebugColor\" "
 WorldPartitionRuntimeHash="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" \"Object.RuntimeSettings.Grids.Grids[0].DebugColor\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" \"Object.RuntimeSettings.Grids.Grids[0].DebugColor\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
 GameplayTagsSettings="\"Object\" "
@@ -1250,7 +1268,7 @@ SkeletalMeshComponent="\"Object\" "
 SkinnedMeshComponent="\"Object\" "
 Enem_AI_Animation_C="\"Object\" "
 AnimInstance="\"Object\" "
-BP_ThirdPersonCharacter_C="\"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
+BP_ThirdPersonCharacter_C="\"Object\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
 SkeletalMesh="\"Object\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
 LODInfoUILayout="\"Object\" "
 NiagaraBakerSettings="\"Object\" "
@@ -1281,9 +1299,14 @@ BoxComponent="\"Object\" "
 SoundNodeRandom="\"Object\" "
 EnemyAiANim_C="\"Object\" "
 SoundNodeModulator="\"Object\" "
+SpringArmComponent="\"Object\" "
+ABP_Quinn_PostProcess_C="\"Object\" "
+AnimGraphNode_Root="\"Object\" "
+AnimGraphNode_Base="\"Object\" "
+AnimGraphNode_Slot="\"Object\" "
 
 [Directories2]
-UNR=E:/NeonSkiesGame/NeonSkies/Content/NS_Levels
+UNR=E:/NeonSkies/Content/NS_Levels
 BRUSH=../../../../UAB_InteractivePlayer/NeonSkies/Content/
 FBX=../../../../UAB_InteractivePlayer/NeonSkies/Content/
 FBXAnim=../../../../UAB_InteractivePlayer/NeonSkies/Content/
@@ -1293,7 +1316,7 @@ GenericOpen=../../../../UAB_InteractivePlayer/NeonSkies/Content/
 GenericSave=../../../../UAB_InteractivePlayer/NeonSkies/Content/
 MeshImportExport=../../../../UAB_InteractivePlayer/NeonSkies/Content/
 WorldRoot=../../../../UAB_InteractivePlayer/NeonSkies/Content/
-Level=E:/NeonSkiesGame/NeonSkies/Content/NS_Levels
+Level=E:/NeonSkies/Content/NS_Levels
 Project=D:/UE_5.0/
 
 [ModuleFileTracking]
@@ -2228,8 +2251,8 @@ bPromptBeforeAutoImporting=True
 bDeleteSourceFilesWithAssets=False
 
 [MRU]
-MRUItem0=/Game/NS_Levels/NS_MainMenuLevel
-MRUItem1=/Game/NS_Levels/NS_MainLevel
+MRUItem0=/Game/NS_Levels/NS_MainLevel
+MRUItem1=/Game/NS_Levels/NS_MainMenuLevel
 MRUItem2=/Game/Neon_City/Maps/Overview
 MRUItem3=/Game/FirstPerson/Maps/FirstPersonMap
 
@@ -2321,14 +2344,15 @@ TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings,InputSettin
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Sprint,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Sprint,
 StaticMesh=StaticMesh.LOD0.MeshBuildSettings,StaticMesh.LOD0.MeshReductionSettings,
-PropertyWrapper=PropertyWrapper.DefaultValueCategory.Punch Anim Montage Array,PropertyWrapper.DefaultValueCategory.Dying Montage Array,
-Enemy_BP_C=PropertyWrapper.DefaultValueCategory.Punch Anim Montage Array,PropertyWrapper.DefaultValueCategory.Dying Montage Array,
-K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.Punch Anim Montage Array,PropertyWrapper.DefaultValueCategory.Dying Montage Array,
-K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.Punch Anim Montage Array,
-BP_FirstPersonCharacter_C=PropertyWrapper.DefaultValueCategory.Punch Anim Montage Array,PropertyWrapper.DefaultValueCategory.Dying Montage Array,
+PropertyWrapper=PropertyWrapper.DefaultValueCategory.Punch Anim Montage Array,PropertyWrapper.DefaultValueCategory.Dying Montage Array,K2Node_VariableGet.DefaultValueCategory.Punch Anim Montage Array,
+Enemy_BP_C=PropertyWrapper.DefaultValueCategory.Punch Anim Montage Array,PropertyWrapper.DefaultValueCategory.Dying Montage Array,K2Node_VariableGet.DefaultValueCategory.Punch Anim Montage Array,
+K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.Punch Anim Montage Array,PropertyWrapper.DefaultValueCategory.Dying Montage Array,K2Node_VariableGet.DefaultValueCategory.Punch Anim Montage Array,
+K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.Punch Anim Montage Array,PropertyWrapper.DefaultValueCategory.Dying Montage Array,K2Node_VariableGet.DefaultValueCategory.Punch Anim Montage Array,
+BP_FirstPersonCharacter_C=PropertyWrapper.DefaultValueCategory.Punch Anim Montage Array,PropertyWrapper.DefaultValueCategory.Dying Montage Array,K2Node_VariableGet.DefaultValueCategory.Punch Anim Montage Array,
+BoxComponent=PropertyWrapper.DefaultValueCategory.Punch Anim Montage Array,PropertyWrapper.DefaultValueCategory.Dying Montage Array,K2Node_VariableGet.DefaultValueCategory.Punch Anim Montage Array,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/NS_Enemy/Animation
+ContentBrowserTab1.SelectedPaths=/Game/NS_Enemy
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.Locked=False
 ContentBrowserDrawer.FavoritesAreaExpanded=False
@@ -2346,7 +2370,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/NS_Enemy/Animation
+ContentBrowserDrawer.SelectedPaths=/Game/Characters/Mannequins/Meshes
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2433,26 +2457,26 @@ GameMapsSettings=True
 InputSettings=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Blueprints/EnemyAiANim
-MRUItem1=/Game/NS_Enemy/Animation/RTG_Ch44_nonPBR_Mannequin
-MRUItem2=/Game/NS_Enemy/Animation/Dying_Anim_mixamo_com
-MRUItem3=/Game/NS_Enemy/Animation/Punching__6__Anim_mixamo_com_Retargeted_Montage
-MRUItem4=/Game/NS_Audio/DeathCue
-MRUItem5=/Game/NS_Audio/Impact_Cue
+MRUItem0=/Game/Characters/Mannequins/Materials/Instances/Manny/MI_Manny_01
+MRUItem1=/Game/Characters/Mannequins/Materials/Instances/Manny/MI_Manny_02
+MRUItem2=/Game/Characters/Mannequins/Meshes/SKM_Manny
+MRUItem3=/Game/Characters/Mannequins/Rigs/ABP_Quinn_PostProcess
+MRUItem4=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem5=/Game/Cross_Punch__1__Anim_mixamo_com_Montage
 MRUItem6=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
 MRUItem7=/Game/NS_Enemy/Enemy_BP
-MRUItem8=/Game/NS_Enemy/Animation/Elbow_Punching__1__Anim_mixamo_com_Retargeted
-MRUItem9=/Game/NS_Enemy/Animation/Punching__4__Anim_mixamo_com
-MRUItem10=/Game/NS_Enemy/Animation/Punching__7__Anim_mixamo_com
-MRUItem11=/Game/NS_Enemy/Animation/Punching__4_
-MRUItem12=/Game/NS_Enemy/Animation/Ch44_nonPBR_Anim_mixamo_com
-MRUItem13=/Game/NS_Enemy/Animation/IK_Ch44_nonPBR
-MRUItem14=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin
-MRUItem15=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin_Skeleton
-MRUItem16=/Game/NS_Enemy/Animation/Punching
-MRUItem17=/Game/Neon_City/Meshes/SM_Neon_Skyscraper_Building_05
-MRUItem18=/Game/Neon_City/Meshes/SM_Neon_Building_12
-MRUItem19=/Game/Neon_City/Meshes/Star_Tower
+MRUItem8=/Game/NS_Audio/Impact_Cue
+MRUItem9=/Game/Punching__7__Anim_mixamo_com
+MRUItem10=/Game/Punching__6__Anim_mixamo_com_Retargeted
+MRUItem11=/Game/Elbow_Punching__1__Anim_mixamo_com
+MRUItem12=/Game/NS_Enemy/Animation/Cross_Punch__1__Anim_mixamo_com_Retargeted_Montage
+MRUItem13=/Game/Cross_Punch__1__Anim_mixamo_com
+MRUItem14=/Game/ThirdPerson/Blueprints/EnemyAiANim
+MRUItem15=/Game/NS_Enemy/Animation/RTG_Ch44_nonPBR_Mannequin
+MRUItem16=/Game/NS_Enemy/Animation/Dying_Anim_mixamo_com
+MRUItem17=/Game/NS_Enemy/Animation/Punching__6__Anim_mixamo_com_Retargeted_Montage
+MRUItem18=/Game/NS_Audio/DeathCue
+MRUItem19=/Game/NS_Enemy/Animation/Elbow_Punching__1__Anim_mixamo_com_Retargeted
 
 [WidgetTemplatesExpanded]
 Common=False
@@ -2619,6 +2643,12 @@ GraphEditorQuickJumps=()
 /Game/NS_Audio/Impact_Cue.Impact_Cue=0
 /Game/NS_Enemy/Animation/Dying_Anim_mixamo_com.Dying_Anim_mixamo_com=0
 /Game/NS_Enemy/Animation/RTG_Ch44_nonPBR_Mannequin.RTG_Ch44_nonPBR_Mannequin=0
+/Game/Punching__7__Anim_mixamo_com.Punching__7__Anim_mixamo_com=1
+/Game/Characters/Mannequins/Rigs/ABP_Quinn_PostProcess.ABP_Quinn_PostProcess=1
+/Game/Cross_Punch__1__Anim_mixamo_com_Montage.Cross_Punch__1__Anim_mixamo_com_Montage=1
+/Game/Characters/Mannequins/Meshes/SKM_Manny.SKM_Manny=0
+/Game/Characters/Mannequins/Materials/Instances/Manny/MI_Manny_02.MI_Manny_02=1
+/Game/Characters/Mannequins/Materials/Instances/Manny/MI_Manny_01.MI_Manny_01=1
 
 [SuppressableDialogs]
 DeleteConfirmationVariable_Warning=False
@@ -2664,6 +2694,7 @@ GameMapsSettings.DefaultMaps=True
 PlayerStart.Actor=True
 WorldSettings.PrecomputedVisibility=True
 StaticMeshActor.StaticMesh=False
+SkeletalMesh.LODCustomMode=False
 
 [MaterialEditor]
 PrimType=1
