added controls to pause menu

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -95,7 +95,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=2133,Y=2000)
+LastSize=(X=2133,Y=1360)
 LastExecutedLaunchDevice=Windows@DESKTOP-H39IJFD
 LastExecutedLaunchName=DESKTOP-H39IJFD
 LastExecutedPIEPreviewDevice=
@@ -103,7 +103,7 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=0,Y=0)
 NewWindowWidth=2133
-NewWindowHeight=2000
+NewWindowHeight=1360
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
@@ -139,9 +139,7 @@ LastLevel=/Game/NS_Levels/NS_MainLevel
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/NS_Enemy/Enemy_BP.Enemy_BP
-OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
-OpenAssetsAtExit=/Game/Characters/Mannequins/Meshes/SKM_Manny.SKM_Manny
+OpenAssetsAtExit=/Game/NS_PauseMenu/PauseMenuWidget.PauseMenuWidget
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1059,6 +1057,45 @@ AnimGraphNode_Root.Tag=True
 AnimGraphNode_Slot.Settings=True
 AnimGraphNode_Slot.Functions=True
 AnimGraphNode_Slot.Tag=True
+PauseMenuWidget_C.Appearance=True
+PauseMenuWidget_C.Designer=True
+PauseMenuWidget_C.Input=True
+PauseMenuWidget_C.Interaction=True
+PauseMenuWidget_C.Performance=True
+PauseMenuWidget_C.Layout=True
+PauseMenuWidget_C.Behavior=True
+PauseMenuWidget_C.Render Transform=True
+PauseMenuWidget_C.Localization=True
+PauseMenuWidget_C.Accessibility=True
+PauseMenuWidget_C.Clipping=True
+PauseMenuWidget_C.Navigation=True
+SizeBox.Layout=True
+SizeBox.Child Layout=True
+SizeBox.Accessibility=True
+SizeBox.Behavior=True
+SizeBox.Render Transform=True
+SizeBox.Performance=True
+SizeBox.Clipping=True
+SizeBox.Navigation=True
+SizeBox.Localization=True
+NamedSlot.Layout=True
+NamedSlot.Behavior=True
+NamedSlot.Accessibility=True
+NamedSlot.Render Transform=True
+NamedSlot.Performance=True
+NamedSlot.Clipping=True
+NamedSlot.Navigation=True
+NamedSlot.Localization=True
+BackgroundBlur.Layout=True
+BackgroundBlur.Content=True
+BackgroundBlur.Appearance=True
+BackgroundBlur.Accessibility=True
+BackgroundBlur.Behavior=True
+BackgroundBlur.Render Transform=True
+BackgroundBlur.Performance=True
+BackgroundBlur.Clipping=True
+BackgroundBlur.Navigation=True
+BackgroundBlur.Localization=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1073,7 +1110,7 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap", ()),("/Game/NS_Levels/NS_MainLevel.NS_MainLevel", ()))
 
 [RootWindow]
-ScreenPosition=X=1132.667 Y=41.333
+ScreenPosition=X=1132.000 Y=41.000
 WindowSize=X=1304.000 Y=744.000
 InitiallyMaximized=True
 
@@ -1189,15 +1226,15 @@ K2Node="\"Object\" "
 EdGraphNode="\"Object\" "
 NS_Hud_C="\"Object\" "
 UserWidget="\"Object\" "
-Widget="\"Object\" "
-Visual="\"Object\" "
-HorizontalBox="\"Object\" "
-PanelWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.ColorAndOpacity\" "
-TextBlock="\"Object\" \"Object.Appearance.ColorAndOpacity\" "
-TextLayoutWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" "
-CanvasPanel="\"Object\" "
-VerticalBox="\"Object\" "
-ProgressBar="\"Object\" \"Object.Appearance.FillColorAndOpacity\" "
+Widget="\"Object\" \"Object.Layout.Slot\" "
+Visual="\"Object\" \"Object.Layout.Slot\" "
+HorizontalBox="\"Object\" \"Object.Layout.Slot\" "
+PanelWidget="\"Object\" \"Object.Layout.Slot\" "
+TextBlock="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" "
+TextLayoutWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" "
+CanvasPanel="\"Object\" \"Object.Layout.Slot\" "
+VerticalBox="\"Object\" \"Object.Layout.Slot\" "
+ProgressBar="\"Object\" \"Object.Appearance.FillColorAndOpacity\" \"Object.Layout.Slot\" "
 SkyLightComponent="\"Object\" "
 LightComponentBase="\"Object\" "
 DirectionalLightComponent="\"Object\" "
@@ -1232,7 +1269,7 @@ UserWidgetBlueprint="\"Object\" "
 Blueprint="\"Object\" "
 BlueprintCore="\"Object\" "
 Button="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.ColorAndOpacity\" "
-ContentWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.ColorAndOpacity\" "
+ContentWidget="\"Object\" \"Object.Layout.Slot\" "
 MaterialEditorInstanceConstant="\"Object\" \"Object.ParameterGroups.ParameterGroups[1].Parameters.Parameters[0].Object.ParameterValue\" "
 MaterialInstanceConstant="\"Object\" "
 MaterialInstance="\"Object\" "
@@ -1304,9 +1341,13 @@ ABP_Quinn_PostProcess_C="\"Object\" "
 AnimGraphNode_Root="\"Object\" "
 AnimGraphNode_Base="\"Object\" "
 AnimGraphNode_Slot="\"Object\" "
+PauseMenuWidget_C="\"Object\" "
+SizeBox="\"Object\" "
+NamedSlot="\"Object\" "
+BackgroundBlur="\"Object\" \"Object.Layout.Slot\" "
 
 [Directories2]
-UNR=E:/NeonSkies/Content/NS_Levels
+UNR=../../../../../../Users/DK/cs476/group/NeonSkies/Content/NS_Levels
 BRUSH=../../../../UAB_InteractivePlayer/NeonSkies/Content/
 FBX=../../../../UAB_InteractivePlayer/NeonSkies/Content/
 FBXAnim=../../../../UAB_InteractivePlayer/NeonSkies/Content/
@@ -2231,8 +2272,8 @@ MixamoAnimationRetargeting.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
-RecentsFiles=C:/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=C:/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=L:/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
@@ -2350,9 +2391,10 @@ K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.Punch Anim Montage Array
 K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.Punch Anim Montage Array,PropertyWrapper.DefaultValueCategory.Dying Montage Array,K2Node_VariableGet.DefaultValueCategory.Punch Anim Montage Array,
 BP_FirstPersonCharacter_C=PropertyWrapper.DefaultValueCategory.Punch Anim Montage Array,PropertyWrapper.DefaultValueCategory.Dying Montage Array,K2Node_VariableGet.DefaultValueCategory.Punch Anim Montage Array,
 BoxComponent=PropertyWrapper.DefaultValueCategory.Punch Anim Montage Array,PropertyWrapper.DefaultValueCategory.Dying Montage Array,K2Node_VariableGet.DefaultValueCategory.Punch Anim Montage Array,
+PauseMenuWidget_C=PropertyWrapper.DefaultValueCategory.Punch Anim Montage Array,PropertyWrapper.DefaultValueCategory.Dying Montage Array,K2Node_VariableGet.DefaultValueCategory.Punch Anim Montage Array,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/NS_Enemy
+ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.Locked=False
 ContentBrowserDrawer.FavoritesAreaExpanded=False
@@ -2457,26 +2499,26 @@ GameMapsSettings=True
 InputSettings=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Characters/Mannequins/Materials/Instances/Manny/MI_Manny_01
-MRUItem1=/Game/Characters/Mannequins/Materials/Instances/Manny/MI_Manny_02
-MRUItem2=/Game/Characters/Mannequins/Meshes/SKM_Manny
-MRUItem3=/Game/Characters/Mannequins/Rigs/ABP_Quinn_PostProcess
-MRUItem4=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem5=/Game/Cross_Punch__1__Anim_mixamo_com_Montage
-MRUItem6=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem7=/Game/NS_Enemy/Enemy_BP
-MRUItem8=/Game/NS_Audio/Impact_Cue
-MRUItem9=/Game/Punching__7__Anim_mixamo_com
-MRUItem10=/Game/Punching__6__Anim_mixamo_com_Retargeted
-MRUItem11=/Game/Elbow_Punching__1__Anim_mixamo_com
-MRUItem12=/Game/NS_Enemy/Animation/Cross_Punch__1__Anim_mixamo_com_Retargeted_Montage
-MRUItem13=/Game/Cross_Punch__1__Anim_mixamo_com
-MRUItem14=/Game/ThirdPerson/Blueprints/EnemyAiANim
-MRUItem15=/Game/NS_Enemy/Animation/RTG_Ch44_nonPBR_Mannequin
-MRUItem16=/Game/NS_Enemy/Animation/Dying_Anim_mixamo_com
-MRUItem17=/Game/NS_Enemy/Animation/Punching__6__Anim_mixamo_com_Retargeted_Montage
-MRUItem18=/Game/NS_Audio/DeathCue
-MRUItem19=/Game/NS_Enemy/Animation/Elbow_Punching__1__Anim_mixamo_com_Retargeted
+MRUItem0=/Game/NS_UI/NS_Hud
+MRUItem1=/Game/NS_Levels/NS_MainLevel
+MRUItem2=/Game/NS_PauseMenu/PauseMenuWidget
+MRUItem3=/Game/Characters/Mannequins/Meshes/SKM_Manny
+MRUItem4=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem5=/Game/NS_Enemy/Enemy_BP
+MRUItem6=/Game/Characters/Mannequins/Materials/Instances/Manny/MI_Manny_01
+MRUItem7=/Game/Characters/Mannequins/Materials/Instances/Manny/MI_Manny_02
+MRUItem8=/Game/Characters/Mannequins/Rigs/ABP_Quinn_PostProcess
+MRUItem9=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem10=/Game/Cross_Punch__1__Anim_mixamo_com_Montage
+MRUItem11=/Game/NS_Audio/Impact_Cue
+MRUItem12=/Game/Punching__7__Anim_mixamo_com
+MRUItem13=/Game/Punching__6__Anim_mixamo_com_Retargeted
+MRUItem14=/Game/Elbow_Punching__1__Anim_mixamo_com
+MRUItem15=/Game/NS_Enemy/Animation/Cross_Punch__1__Anim_mixamo_com_Retargeted_Montage
+MRUItem16=/Game/Cross_Punch__1__Anim_mixamo_com
+MRUItem17=/Game/ThirdPerson/Blueprints/EnemyAiANim
+MRUItem18=/Game/NS_Enemy/Animation/RTG_Ch44_nonPBR_Mannequin
+MRUItem19=/Game/NS_Enemy/Animation/Dying_Anim_mixamo_com
 
 [WidgetTemplatesExpanded]
 Common=False
@@ -2600,7 +2642,7 @@ GraphEditorQuickJumps=()
 [AssetEditorToolkitTabLocation]
 /Game/FirstPerson/Blueprints/BP_FirstPersonGameMode.BP_FirstPersonGameMode=1
 /Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter=0
-/Game/NS_UI/NS_Hud.NS_Hud=1
+/Game/NS_UI/NS_Hud.NS_Hud=0
 /Game/NS_Levels/NS_MainLevel.NS_MainLevel:PersistentLevel.NS_MainLevel=0
 /Engine/BasicShapes/BasicShapeMaterial.BasicShapeMaterial=1
 /Game/NS_Levels/NS_MainMenuLevel.NS_MainMenuLevel:PersistentLevel.SkyLight_0.SkyLightComponent0=1
@@ -2649,6 +2691,7 @@ GraphEditorQuickJumps=()
 /Game/Characters/Mannequins/Meshes/SKM_Manny.SKM_Manny=0
 /Game/Characters/Mannequins/Materials/Instances/Manny/MI_Manny_02.MI_Manny_02=1
 /Game/Characters/Mannequins/Materials/Instances/Manny/MI_Manny_01.MI_Manny_01=1
+/Game/NS_PauseMenu/PauseMenuWidget.PauseMenuWidget=0
 
 [SuppressableDialogs]
 DeleteConfirmationVariable_Warning=False
@@ -2695,6 +2738,7 @@ PlayerStart.Actor=True
 WorldSettings.PrecomputedVisibility=True
 StaticMeshActor.StaticMesh=False
 SkeletalMesh.LODCustomMode=False
+PropertyWrapper.Variable=True
 
 [MaterialEditor]
 PrimType=1
